--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
   <div id="searchOverlay" class="search-overlay hidden">
     <div class="search-box">
       <input type="text" id="searchInput" class="form-control" placeholder="Search..." />
-      <button class="btn btn-primary" onclick="performSearch()"><i class="fas fa-search"></i></button>
+      <button class="btn btn-darker" onclick="performSearch()"><i class="fas fa-search"></i></button>
     </div>
   </div>
 
