--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
 }
 </style>
 <body>
-
-
     <header>
+
+<div id="customAudioPlayer" class="audio-player">
+    <button id="playPauseBtn" class="play-pause-btn">
+        <i class="fas fa-play"></i>
+    </button>
+    <audio id="backgroundMusic" src="img/4AM.mp4"></audio>
+</div>
+
+
         <nav>
     <div class="menu-toggle" >&#9776;</div>
     <h1 class="rotate-logo">BHNM</h1>
