--- a/contact.html
+++ b/contact.html
@@ -10,55 +10,58 @@
     <link rel="Icon" type="jpg" href="img/BNHM.jpg">
 </head>
 <body>
-
-
-
 <header class="header2">
-        <nav class="nav1">
+
+    <div id="customAudioPlayer" class="audio-player">
+        <button id="playPauseBtn" class="play-pause-btn">
+            <i class="fas fa-play"></i>
+        </button>
+        <audio id="backgroundMusic" src="img/4AM.mp4"></audio>
+    </div>
+    
+<nav class="nav1">
     <div class="menu-toggle">&#9776;</div>
     <a href="index.html"><h1 class="rotate-logo">BHNM</h1></a>
 
-  <div class="search-icon">
-    <i class="fas fa-search"></i>
-  </div>
+      <div class="search-icon">
+        <i class="fas fa-search"></i>
+      </div>
 
-  <div id="searchOverlay" class="search-overlay hidden">
-    <div class="search-box">
-      <input type="text" id="searchInput" class="form-control" placeholder="Search..." />
-      <button class="btn btn-darker" onclick="performSearch()"><i class="fas fa-search"></i></button>
+      <div id="searchOverlay" class="search-overlay hidden">
+        <div class="search-box">
+          <input type="text" id="searchInput" class="form-control" placeholder="Search..." />
+          <button class="btn btn-darker" onclick="performSearch()"><i class="fas fa-search"></i></button>
+        </div>
+      </div>
+
+      <div class="cart-icon" id="cartIcon">
+        🛍️
+        <div class="count" id="cartCount">0</div>
     </div>
-  </div>
 
-  <div class="cart-icon" id="cartIcon">
-    🛍️
-    <div class="count" id="cartCount">0</div>
-</div>
-
-<div class="cart-sidebar hidden" id="cartSidebar">
-    <div class="cart-header">
-        <h2>Shopping Cart</h2>
+    <div class="cart-sidebar hidden" id="cartSidebar">
+        <div class="cart-header">
+            <h2>Shopping Cart</h2>
+        </div>
+        <div class="cart-items" id="cartItems"></div>
+        <div class="cart-total">
+            <h4>Total: <span id="cartTotal">0.00€</span></h4>
+        </div>
+        <button id="checkoutBtn" onclick="checkout()">Checkout</button>
     </div>
-    <div class="cart-items" id="cartItems"></div>
-    <div class="cart-total">
-        <h4>Total: <span id="cartTotal">0.00€</span></h4>
+
+    <div class="sidebar-menu">
+        <span class="close-btn">&times;</span>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="shop.html">SHOP NOW</a></li>
+            <li><a href="contact.html">CONTACT US</a></li>
+        </ul>
     </div>
-    <button id="checkoutBtn" onclick="checkout()">Checkout</button>
-</div>
-
-<div class="sidebar-menu">
-    <span class="close-btn">&times;</span>
-    <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="shop.html">SHOP NOW</a></li>
-        <li><a href="contact.html">CONTACT US</a></li>
-    </ul>
-</div>
-
 
 </nav>
+</header>
 
-       
-    </header>
 <br>
 <br>
 
