--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,55 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Contact BHNM</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Contact BHNM</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="Icon" type="jpg" href="img/BNHM.jpg">
 </head>
+<style type="text/css">
+.rotate-logo {
+    font-size: 40px !important;
+    font-weight: bold !important;
+    color: white !important;
+    animation: rotate360 5s linear infinite !important;
+    cursor: pointer !important;
+}
+
+.cart-icon {
+    font-size: 24px !important;
+    cursor: pointer !important;
+    position: relative !important;
+}
+
+.cart-icon .count {
+    position: absolute;
+    top: -8px;
+    right: -10px;
+    background: black;
+    color: white;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    font-size: 12px;
+    text-align: center;
+    line-height: 18px;
+}
+
+footer {
+    background-color: black !important;
+    color: white !important;
+    padding-bottom: 20px !important;
+    text-align: center !important;
+    display: flex !important;
+    justify-content: space-evenly !important;
+    align-items: center !important;
+    gap: 4px !important;
+}
+</style>
 <body>
 <header class="header2">
 
