--- a/shop.html
+++ b/shop.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,6 +11,37 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
         <link rel="Icon" type="jpg" href="img/BNHM.jpg">
 </head>
+
+<style type="text/css">
+.rotate-logo {
+    font-size: 40px !important;
+    font-weight: bold !important;
+    color: white !important;
+    animation: rotate360 5s linear infinite !important;
+    cursor: pointer !important;
+}
+
+.cart-icon {
+    font-size: 24px !important;
+    cursor: pointer !important;
+    position: relative !important;
+}
+
+.cart-icon .count {
+    position: absolute;
+    top: -8px;
+    right: -10px;
+    background: black;
+    color: white;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    font-size: 12px;
+    text-align: center;
+    line-height: 18px;
+}
+
+</style>
 <body>
 
 <header class="header1">
@@ -207,7 +239,7 @@
     </main>
 </section>
     
-<hr class="hr" >
+<hr class="hr" style="border-bottom: 1px solid black; width: 100%;">
 
 <ul class="brand-logos">
   <li><img src="img/bapelogo.jpg"></li>
@@ -218,7 +250,7 @@
   <li><img src="img/stussy.png" style="max-height:130px;"></li>
 </ul>
 
-<hr class="hr" style="border-bottom: 1px solid black; width: 76%;">
+<hr class="hr" style="border-bottom: 1px solid black; width: 100%">
 
 
 <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productModalLabel" aria-hidden="true">
