--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -20,34 +19,62 @@
 }
 
 .cart-icon {
-    font-size: 24px !important;
-    cursor: pointer !important;
-    position: relative !important;
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      font-size: 24px;
+      cursor: pointer;
+      z-index: 1001;
 }
 
 .cart-icon .count {
-    position: absolute;
-    top: -8px;
-    right: -10px;
-    background: black;
-    color: white;
-    border-radius: 50%;
-    width: 18px;
-    height: 18px;
-    font-size: 12px;
-    text-align: center;
-    line-height: 18px;
+      position: absolute;
+      top: -8px;
+      right: -10px;
+      background: black;
+      color: white;
+      border-radius: 50%;
+      width: 18px;
+      height: 18px;
+      font-size: 12px;
+      text-align: center;
+      line-height: 18px;
+}
+
+#cartSidebar {
+    visibility: hidden;
+}
+
+#cartSidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 350px;
+    height: 100%;
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    box-shadow: -4px 0px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    z-index: 984; 
+    overflow-y: scroll;
+}
+
+.cart-sidebar.visible {
+    display: flex; 
 }
 
 footer {
-    background-color: black !important;
-    color: white !important;
-    padding-bottom: 20px !important;
-    text-align: center !important;
-    display: flex !important;
-    justify-content: space-evenly !important;
-    align-items: center !important;
-    gap: 4px !important;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    z-index: 400;
 }
 </style>
 <body>
