--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,32 +11,52 @@
 </head>
 
 <style type="text/css">
-.rotate-logo {
-    font-size: 40px !important;
-    font-weight: bold !important;
-    color: white !important;
-    animation: rotate360 5s linear infinite !important;
-    cursor: pointer !important;
-}
-
 .cart-icon {
-    font-size: 24px !important;
-    cursor: pointer !important;
-    position: relative !important;
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      font-size: 24px;
+      cursor: pointer;
+      z-index: 1001;
 }
 
 .cart-icon .count {
-    position: absolute;
-    top: -8px;
-    right: -10px;
-    background: black;
-    color: white;
-    border-radius: 50%;
-    width: 18px;
-    height: 18px;
-    font-size: 12px;
-    text-align: center;
-    line-height: 18px;
+      position: absolute;
+      top: -8px;
+      right: -10px;
+      background: black;
+      color: white;
+      border-radius: 50%;
+      width: 18px;
+      height: 18px;
+      font-size: 12px;
+      text-align: center;
+      line-height: 18px;
+}
+
+#cartSidebar {
+    visibility: hidden;
+}
+
+#cartSidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 350px;
+    height: 100%;
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    box-shadow: -4px 0px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    z-index: 984; 
+    overflow-y: scroll;
+}
+
+.cart-sidebar.visible {
+    display: flex; 
 }
 
 </style>
