--- a/shop.html
+++ b/shop.html
@@ -346,12 +346,25 @@
 </div>
 
 
-<footer class="f1">
-    <p>&copy; 2025 BHNM. All rights reserved.</p>
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-solid fa-x"></i>
+<footer>
+  <div class="footer-top">
+    <p class="copyright">© 2025 Bleart. All rights reserved.</p>
+    <div class="social-icons">
+      <a href="#"><i class="fab fa-github"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fas fa-times"></i></a>
+    </div>
+  </div>
+
+  <div class="email">
+    <input type="email" placeholder="Your Email..">
+    <button type="submit">Sign Up</button>
+  </div>
+
+  <div class="payment-methods">
+    <img src="img/cards.png" >
+  </div>
 </footer>
 
 
