--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,12 @@
     cursor: pointer !important;
 }
 
+.header2 {
+    position: relative !important;
+    height: 100vh !important;
+    overflow: hidden !important;
+    margin-bottom: -920px !important;
+}
 .cart-icon {
       position: fixed;
       top: 20px;
@@ -65,6 +71,7 @@
 .cart-sidebar.visible {
     display: flex; 
 }
+
 
 footer {
     position: fixed;
