--- a/shop.html
+++ b/shop.html
@@ -11,6 +11,17 @@
 </head>
 
 <style type="text/css">
+    .rotate-logo {
+    font-size: 40px ;
+    font-weight:1 bold ;
+    color: white ;
+    animation: rotate360 5s linear infinite ;
+    cursor: pointer ;
+    text-align: center;
+    position: relative;
+    right: 750px;
+}
+
 .cart-icon {
       position: fixed;
       top: 20px;
