--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,14 @@
 </head>
 <style type="text/css">
 .rotate-logo {
-    font-size: 40px !important;
-    font-weight:1 bold !important;
-    color: white !important;
-    animation: rotate360 5s linear infinite !important;
-    cursor: pointer !important;
+    font-size: 40px ;
+    font-weight:1 bold ;
+    color: white ;
+    animation: rotate360 5s linear infinite ;
+    cursor: pointer ;
+    text-align: center;
+    position: relative;
+    right: 750px;
 }
 
 .header2 {
