--- a/contact.html
+++ b/contact.html
@@ -11,22 +11,13 @@
 </head>
 <style type="text/css">
 .rotate-logo {
-    font-size: 40px ;
-    font-weight:1 bold ;
-    color: white ;
-    animation: rotate360 5s linear infinite ;
-    cursor: pointer ;
-    text-align: center;
-    position: relative;
-    right: 750px;
+    font-size: 40px !important;
+    font-weight:1 bold !important;
+    color: white !important;
+    animation: rotate360 5s linear infinite !important;
+    cursor: pointer !important;
 }
 
-.header2 {
-    position: relative !important;
-    height: 100vh !important;
-    overflow: hidden !important;
-    margin-bottom: -920px !important;
-}
 .cart-icon {
       position: fixed;
       top: 20px;
@@ -75,17 +66,24 @@
     display: flex; 
 }
 
-
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: black;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-    z-index: 400;
-}
+        background-color: black;
+        color: white;
+        padding: 10px;
+        text-align: center !important;
+        display: flex !important;
+        justify-content: space-evenly !important;
+        align-items: center !important;
+        gap: 4px;      
+        
+    }
+
+    footer .a11 {
+        color: white !important;
+        text-decoration-style: none !important;
+        font-size: 25px !important;
+    }
+
 </style>
 <body>
 <header class="header2">
@@ -186,15 +184,6 @@ footer {
       <a href="#"><i class="fab fa-facebook"></i></a>
       <a href="#"><i class="fas fa-times"></i></a>
     </div>
-  </div>
-
-  <div class="email">
-    <input type="email" placeholder="Your Email..">
-    <button type="submit">Sign Up</button>
-  </div>
-
-  <div class="payment-methods">
-    <img src="img/cards.png" >
   </div>
 </footer>
 
