--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@ footer {
         
     }
 
-    footer .a11 {
+    footer a {
         color: white !important;
         text-decoration-style: none !important;
         font-size: 25px !important;
@@ -175,18 +175,13 @@ footer {
 <br>
 <br>
 
-<footer>
-  <div class="footer-top">
-    <p class="copyright">© 2025 Bleart. All rights reserved.</p>
-    <div class="social-icons">
+<footer class="a11">
+    <p>© 2025 Bleart. All rights reserved.</p>
       <a href="#"><i class="fab fa-github"></i></a>
       <a href="#"><i class="fab fa-instagram"></i></a>
       <a href="#"><i class="fab fa-facebook"></i></a>
       <a href="#"><i class="fas fa-times"></i></a>
-    </div>
-  </div>
 </footer>
-
 
 
 <script src="js/jquery-3.7.1.min.js"></script>
